# portefolios-cli

./: ARCHITECTURE_ANALYSIS.md  Cargo.toml  README.md  project.toml
.github/workflows/: ci.yml
docs/: portfolio.md
src/: config.rs  lib.rs  main.rs  models.rs  utils.rs
src/application/: errors.rs  mod.rs
src/application/commands/: docs.rs  list.rs  mod.rs  new.rs  open.rs  run.rs
src/application/dto/: commands.rs  filters.rs  mod.rs  queries.rs
src/application/services/: documentation_service.rs  mod.rs  portfolio_service.rs  project_service.rs
src/commands/: docs.rs  list.rs  mod.rs  new.rs  open.rs  run.rs
src/domain/: config.rs  errors.rs  mod.rs  utils.rs
src/domain/models/: architecture.rs  enums.rs  language.rs  mod.rs  portfolio.rs  project.rs  status.rs
src/domain/value_objects/: mod.rs  project_id.rs  project_name.rs
src/infrastructure/: errors.rs  mod.rs
src/infrastructure/config/: config.rs  config_structure.rs  loader.rs  mod.rs
src/infrastructure/repositories/: filesystem_repository.rs  mod.rs  portfolio_repository.rs
src/infrastructure/services/: editor.rs  mod.rs  process_runner.rs  version_control.rs
src/presentation/: app_context.rs  cli.rs  cli_application.rs  mod.rs
src/presentation/cli/: definitions.rs  mod.rs
src/presentation/commands/: list.rs  mod.rs  new.rs
src/presentation/formatters/: compact_formatter.rs  json_formatter.rs  mod.rs  table_formatter.rs
