[package]
name = "portfolio-cli"
version = "0.1.0"
edition = "2024"
authors = ["Mollet Tristan"]
description = "CLI tool for managing and documenting a portfolio"


[[bin]]
name = "portfolio-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
