[package]
name = "portfolio-cli"
version = "0.1.0"
edition = "2024"
authors = ["Mollet Tristan"]
description = "CLI tool for managing and documenting a portfolio"

[[bin]]
name = "portfolio-cli"
path = "src/main.rs"

[dependencies]
# CLI & Parsing
clap = { version = "4.5.60", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Error Handling
anyhow = "1.0.102"       # Only for main.rs
thiserror = "2.0.18"

# Terminal UI
colored = "3.1.1"
tabled = "0.20.0"

# Utilities
chrono = { version = "0.4.43", features = ["serde"] }
walkdir = "2.5.0"
dirs = "6.0.0"

# NEW: Performance & Concurrency
rayon = "1.11.0"        # Parallel processing
once_cell = "1.21.3"   # Lazy statics

# NEW: Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# NEW: Security (optional)
keyring = "3.6.3"      # Secure token storage

[dev-dependencies]
tempfile = "3.25.0"
mockall = "0.14.0"     # Mocking framework
assert_fs = "1.1.3"    # File system testing
predicates = "3.1.4"   # Better assertions